// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionsOfUser render questions[0] TRUE 1`] = `
<InfinityLoader
  infinityOff={false}
  isLastFetch={false}
  isLoading={true}
  loadNextPaginatedData={[Function]}
>
  <div
    className="className"
  >
    <Header />
    <QuestionsList
      communities={Array []}
      locale="en"
      questions={
        Array [
          Object {
            "acceptedAnswer": false,
            "answers": Array [],
            "communities": Array [],
            "community_id": 123,
            "id": "id",
            "locale": "en",
            "myPostRating": 100,
            "myPostTime": 1550837750334,
            "title": "title",
          },
        ]
      }
    />
    <LoadingIndicator />
  </div>
</InfinityLoader>
`;

exports[`QuestionsOfUser render questionsLoading TRUE 1`] = `
<InfinityLoader
  infinityOff={false}
  isLastFetch={false}
  isLoading={true}
  loadNextPaginatedData={[Function]}
>
  <div
    className="className"
  >
    <Header />
    <LoadingIndicator />
  </div>
</InfinityLoader>
`;
